[gd_scene load_steps=7 format=3 uid="uid://qllcb8v2mmpi"]

[ext_resource type="Script" uid="uid://22fap6cfjikc" path="res://Hazards/string_bean.gd" id="1_ugcg5"]
[ext_resource type="Texture2D" uid="uid://c2e287bm52knm" path="res://Assets/Sprites/Fatty normal.png" id="2_pui2k"]
[ext_resource type="Texture2D" uid="uid://yfcj4udepxwd" path="res://Assets/Sprites/Fatty smiling.png" id="3_ndje8"]
[ext_resource type="PackedScene" uid="uid://dytwcxut67ivy" path="res://Scenes/kill_zone.tscn" id="3_pui2k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_287tu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pui2k")
}],
"loop": true,
"name": &"Base",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ndje8")
}],
"loop": true,
"name": &"Kill",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugcg5"]
size = Vector2(8, 24)

[node name="String_Bean" type="Node2D" groups=["Enemies"]]
script = ExtResource("1_ugcg5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.5, -23.5)
scale = Vector2(0.53125, 1.46875)
sprite_frames = SubResource("SpriteFrames_287tu")
animation = &"Kill"
autoplay = "Base"

[node name="Kill_zone" parent="." instance=ExtResource("3_pui2k")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill_zone"]
position = Vector2(4, -12)
shape = SubResource("RectangleShape2D_ugcg5")

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(6, 9)

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(-6, 9)

[node name="RayCast_Left_wall" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(-5, 0)

[node name="RayCast_Right_wall" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(5, 0)

[node name="RayCast_Left_Celing" type="RayCast2D" parent="."]
position = Vector2(4, -16)
target_position = Vector2(-5, -7)

[node name="RayCast_Right_Celing" type="RayCast2D" parent="."]
position = Vector2(6, -17)
target_position = Vector2(3, -6)

[connection signal="body_entered" from="Kill_zone" to="." method="_on_kill_zone_body_entered"]
